--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Git-Flow-Train</string>
+    <string name="git_flow_test">Git Flow Test</string>
 </resources>
